--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 .DS_Store
-.idea
-.idea/
 node_modules/
+dist/
 npm-debug.log
-selenium-debug.log
 test/unit/coverage
 test/e2e/reports
-dist/static/
-dist/index.html
+selenium-debug.log
