--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
+    "materialize-css": "^0.97.7",
     "font-awesome": "^4.6.3",
     "vue-router": "^2.0.0",
     "vuex": "^2.0.0",
