* added starters for semanticui and foundation

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
     "materialize-css": "^0.97.7",
+    "semantic-ui": "^2.2.4",
     "font-awesome": "^4.6.3",
     "vue-router": "^2.0.0",
     "vuex": "^2.0.0",
